Fix author align, site language, specify transition styles

--- a/src/scss/components/_author.scss
+++ b/src/scss/components/_author.scss
@@ -4,6 +4,7 @@
   gap: 12px;
 
   &__img {
+    display: block;
     border-radius: 50%;
     width: 24px;
     height: 24px;
