--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -6,7 +6,7 @@
   padding: 15px 0;
   width: 100%;
   background-color: var(--grey-color);
-  transition: 0.3s;
+  transition: box-shadow 0.3s;
 
   &__wrap {
     display: flex;
